// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with editPath renders correctly 1`] = `
<div
  to="foo/:id/avatar"
>
  <div
    className="MuiCardMedia-root-1"
    src={undefined}
    style={
      Object {
        "backgroundColor": "#ddd",
        "backgroundImage": "url(\\"/images/avatar.png\\")",
        "borderRadius": 2,
        "display": "inline-block",
        "height": 400,
        "marginRight": 16,
        "width": 400,
      }
    }
    title="Clique para editar"
  />
</div>
`;

exports[`without editPath renders correctly 1`] = `
<div
  className="MuiCardMedia-root-1"
  src={undefined}
  style={
    Object {
      "backgroundColor": "#ddd",
      "backgroundImage": "url(\\"/images/avatar.png\\")",
      "borderRadius": 2,
      "display": "inline-block",
      "height": 400,
      "marginRight": 16,
      "width": 400,
    }
  }
  title={undefined}
/>
`;
